[package]
name = "nephrite"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
cgmath = "0.18.0"
log = "0.4.29"
png = "0.18.1"
pretty_env_logger = "0.5.0"
thiserror = "2.0.18"
tobj = { version = "4.0.3", features = ["log"] }
vulkanalia = { version = "0.35.0", features = ["libloading", "provisional", "window"] }
winit = "0.30.13"
